# yolov8-license-plate-recognition

./: .env.example  .flake8  Dockerfile  Makefile  README.md  batch_processor.py  config.yaml  config_manager.py  database_manager.py  docker-compose.yml  file_project_structure.md  license_plate_recognizer.py  license_plates.db  main_app.py  main_recognizer.py  pyproject.toml  pytest.ini  realtime_processor.py  requirements.txt  setup.py  web_interface.py
